derive/test/compile_fail/tuple_incomplete_labels.rs
use sval_derive::*;

#[derive(Value)]
pub struct Tuple(#[sval(label = "a")] i32, i32, i32);

fn main() {

}